--- a/ClientWebApp/Components/CameraComponent.razor
+++ b/ClientWebApp/Components/CameraComponent.razor
@@ -4,30 +4,60 @@
 @inject IJSRuntime JS
 @inject DialogService DialogService
 
-<video id="player" controls autoplay></video>
-<button id="capture">Capture</button>
-<canvas id="canvas" width="320" height="240"></canvas>
+
+<RadzenButton Text="Fotocamera" Icon="photo_camera" Click="@OpenCamera" />
+<RadzenButton Text="Documenti" Icon="folder" />
+
+@if (isCameraOpen)
+{
+  <video id="player" controls autoplay></video>
+
+  <canvas id="canvas" width="320" height="240"></canvas>
+
+  <RadzenButton Text="Scatta" Click="@TakePicture" />
+}
 
 
 @code {
+
+  private IJSObjectReference jsModule;
+
+  private bool isCameraOpen = false;
+
+  protected override async Task OnAfterRenderAsync(bool firstRender)
+  {
+    if(isCameraOpen)
+    {
+      await jsModule.InvokeVoidAsync("openCamera");
+    }
+    Console.WriteLine("Reloaded");
+    await base.OnAfterRenderAsync(firstRender);
+  }
+
 
   protected override async Task OnInitializedAsync()
   {
     await base.OnInitializedAsync();
 
-    var jsModule = await JS.InvokeAsync<IJSObjectReference>("import", "./camera-service.js");
+    jsModule = await JS.InvokeAsync<IJSObjectReference>("import", "./camera-service.js");
 
-    await jsModule.InvokeVoidAsync("Init", DotNetObjectReference.Create(this));
   }
+
+  public async Task OpenCamera()
+  {
+    isCameraOpen = true;
+  }
+
+  public async Task TakePicture()
+  {
+    await jsModule.InvokeVoidAsync("takePicture", DotNetObjectReference.Create(this));
+  }
+
 
   [JSInvokable]
   public async Task GetImage(string base64Image)
   {
-    
-
-    DialogService.Close(base64Image); 
-    
+    DialogService.Close(base64Image);
   }
 
 }
-
