--- a/ConstructionSiteLibrary/Components/Clients/TableClient.razor
+++ b/ConstructionSiteLibrary/Components/Clients/TableClient.razor
@@ -1,4 +1,5 @@
 ﻿@using ConstructionSiteLibrary.Repositories
+@using ConstructionSiteLibrary.Components.Generics
 @using Shared;
 @using Shared.Documents;
 
@@ -7,12 +8,65 @@
 @inject GlobalVariables GlobalVariables
 
 <ScreenComponent @ref="screenComponent" />
-@if (initialLoading)
+@if (onLoading)
 {
     <Loading />
 }
 else
 {
+    <div class="mx-2 my-5">
+        <SectionTitle PageTitle="Committenti" ButtonText="+ aggiungi committente" SearchPlaceholder="Cerca committente"
+                        OnButtonClicked="@OpenNewForm" OnSearchChanged="@SearchChanged" />
+
+        <table class="table table-striped">
+            <thead>
+                <th scope="col">Nome</th>
+                <th scope="col"></th>
+            </thead>
+            <tbody>
+                @for(int i = 0; i < displayedClients.Count; i += 1)
+                {
+                    int index = i;
+                    <tr>
+                        <td>@displayedClients[i].Name</td>
+                        <td>
+                            <ButtonDropdown Object="@displayedClients[i]"
+                                OnUpdateClicked="@OpenUpdateForm" OnDeleteClicked="@Hide"/>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+        <div class="mt-5">
+            <AxtPager PagingSummaryFormat="@pagingSummaryFormat" Count="@count" PageSize="@pageSize" OnPageChanged="@PageChanged" />
+        </div>
+    </div>
+
+    <script>
+    @*When the user clicks on the button,
+    toggle between hiding and showing the dropdown content *@
+    function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+    }
+
+    // Close the dropdown if the user clicks outside of it
+    window.onclick = function (event) {
+        if (!event.target.matches('.buttonOptions')) {
+            var dropdowns = document.getElementsByClassName("dropdown-content");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+                var openDropdown = dropdowns[i];
+                if (openDropdown.classList.contains('show')) {
+                    openDropdown.classList.remove('show');
+                }
+            }
+        }
+    }
+    </script>
+
+    <!--
+
     <h2>@Param</h2>
 
     @* La tabella dei clienti *@
@@ -44,6 +98,8 @@ else
             </RadzenDataGrid>
         </RadzenFieldset>
     </div>
+
+    -->
 
 
 }
